# Practica1_EDD_PS2026

./: CMakeLists.txt  main.cpp
cartas/: Carta.cpp  Carta.h  CartaAccion.cpp  CartaAccion.h  CartaComodin.cpp  CartaComodin.h  CartaNumero.cpp  CartaNumero.h
estructuras/: ListaCircular.h  ListaSimple.h  Nodo.h  Stack.h
juego/: Configuracion.cpp  Configuracion.h  ControlUNO.cpp  ControlUNO.h  GestorCartas.cpp  GestorCartas.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Mazo.cpp  Mazo.h  MotorReglas.cpp  MotorReglas.h  ReglasJuego.cpp  ReglasJuego.h
util/: Colores.h  TiposCarta.h
